--- a/blogicum/templates/blog/detail.html
+++ b/blogicum/templates/blog/detail.html
@@ -1,21 +1,20 @@
 {% extends "base.html" %}
-    <!-- Формируется из локации и даты -->
-    {% block title %}{% endblock %}
-    {% block content %}
-        <article>
-          <ul>
-            <li>
-              Место: {{ post.location }}
-            </li>
-            <li>
-              Дата: {{ post.date }}
-            </li>
-            <li>
-              Категория: <a href="not-my-day">{{ post.category }}</a>
-            </li>
-          </ul>         
-          <p>
-            {{ post.text|linebreaks }}
-          </p>
-        </article>
-    {% endblock %}
+{% block title %}{{ post.location }}. {{ post.date }}{% endblock %}
+{% block content %}
+  <article>
+    <ul>
+      <li>
+        Место: {{ post.location }}
+      </li>
+      <li>
+        Дата: {{ post.date }}
+      </li>
+      <li>
+        Категория: <a href="{% url 'blog:category_posts' post.category %}">{{ post.category }}</a>
+      </li>
+    </ul>         
+    <p>
+      {{ post.text|linebreaks }}
+    </p>
+  </article>
+{% endblock %}
