--- a/blogicum/templates/blog/index.html
+++ b/blogicum/templates/blog/index.html
@@ -1,10 +1,9 @@
 {% extends "base.html" %}
 {% block title %}Лента записей{% endblock %}
-        {% block content %}
-        <h1>Лента записей</h1>                        
-        <!-- Перебираем в цикле все посты -->
-        {% for post in posts reversed %}
-        <hr>
+{% block content %}
+  <h1>Лента записей</h1>                        
+    {% for post in posts reversed %}
+      <hr>
         <article>
           <ul>
             <li>
@@ -14,14 +13,13 @@
               Дата: {{ post.date }}
             </li>
             <li>
-              Категория: <a href='{% url "blog:category_posts" post.category %}'>{{ post.category }}</a>
+              Категория: <a href="{% url 'blog:category_posts' post.category %}">{{ post.category }}</a>
             </li>
           </ul>          
-          <!-- Первые 10 слов -->
           <p>
             {{ post.text|truncatewords:10 }}
           </p>
-          <a href='{% url "blog:post_detail" post.id %}'>Читать полный текст</a>
+          <a href="{% url 'blog:post_detail' post.id %}">Читать полный текст</a>
         </article>
-        {% endfor %}
-        {% endblock %}
+    {% endfor %}
+{% endblock %}
