--- a/blogicum/templates/includes/header.html
+++ b/blogicum/templates/includes/header.html
@@ -3,9 +3,12 @@
     <nav class="navbar navbar-light" style="background-color: lightskyblue">
       <div class="container">
         <a class="navbar-brand" href='{% url "blog:index" %}'>
-          <img src='{% static "img/logo.png" %}' 
-          width="30" height="30"
-          class="d-inline-block align-top" alt=""
+          <img 
+            src='{% static "img/logo.png" %}' 
+            width="30" 
+            height="30"
+            class="d-inline-block align-top" 
+            alt=""
           >
           Блогикум
         </a>
@@ -36,4 +39,4 @@
       </div>
     {% endwith %}
     </nav>
-  </header>
+</header>
