After_firts_review

--- a/blogicum/templates/blog/index.html
+++ b/blogicum/templates/blog/index.html
@@ -2,7 +2,7 @@
 {% block title %}Лента записей{% endblock %}
 {% block content %}
   <h1>Лента записей</h1>                        
-    {% for post in posts reversed %}
+    {% for id, post in posts.items reversed %}
       <hr>
         <article>
           <ul>
